--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>messmsg</name>
+  <name>mess_msgs</name>
   <version>1.0.0</version>
-  <description>The messmsg package</description>
-  <url type="website">https://github.com/marinarasauced/messmsg</url>
+  <description>The mess_msgs package</description>
+  <url type="website">https://github.com/marinarasauced/mess_msgs</url>
   <maintainer email="mjnelson@wpi.edu">Marina Nelson</maintainer>
   <author email="mjnelson@wpi.edu">Marina Nelson</author>
   <license>TO DO</license>
