--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,9 @@
   <author email="mjnelson@wpi.edu">Marina Nelson</author>
   <license>TO DO</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>std_msgs</depend>
   <build_depend>message_generation</build_depend>
+  <build_export_depend>message_runtime</build_export_depend>
   <exec_depend>message_runtime</exec_depend>
   <export>
   </export>
