--- a/package.xml
+++ b/package.xml
@@ -8,10 +8,19 @@
   <author email="mjnelson@wpi.edu">Marina Nelson</author>
   <license>TO DO</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>std_msgs</depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_export_depend>message_runtime</build_export_depend>
+  <build_depend>message_runtime</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>message_generation</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
   <export>
   </export>
 </package>
